@@ -1,17 +1,0 @@
-package galyleo.dependency.aether;
-
-import lombok.NoArgsConstructor;
-import lombok.ToString;
-import lombok.extern.log4j.Log4j2;
-import org.eclipse.aether.AbstractRepositoryListener;
-import org.eclipse.aether.RepositoryEvent;
-
-/**
- * Notebook repository listener.
- *
- * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
- * @version $Revision$
- */
-@NoArgsConstructor @ToString @Log4j2
-public class NotebookRepositoryListener extends AbstractRepositoryListener {
-}
