@@ -1,19 +1,0 @@
-package galyleo.dependency.aether;
-
-import lombok.NoArgsConstructor;
-import lombok.ToString;
-import lombok.extern.log4j.Log4j2;
-import org.eclipse.aether.transfer.AbstractTransferListener;
-import org.eclipse.aether.transfer.MetadataNotFoundException;
-import org.eclipse.aether.transfer.TransferEvent;
-import org.eclipse.aether.transfer.TransferResource;
-
-/**
- * Notebook transfer listener.
- *
- * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
- * @version $Revision$
- */
-@NoArgsConstructor @ToString @Log4j2
-public class NotebookTransferListener extends AbstractTransferListener {
-}
